tests/error_tests/pprn_loop.err
resolver error: resolution cycle
 ==> ./tests/error_tests/pprn_loop.tau:1:1
1 |func test() -> int{
  |^^^^^^^^^ type definition depends on itself
2 |    return #main();
  |    ^^^^^^^^^^^^^^
...
7 |public func main() -> int{
  |^^^^^^^^^^^^^^^^ 
8 |    return #bar(test());
  |    ^^^^^^^^^^^^^^^^^^^
  |       loop detected^^
